updated html file

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 </div>
                 <div>
                     <div class="card">
-                        <a href="https://inno-cook.vercel.app/search" target="_blank"><img src="/images/project1.png"
+                        <a href="https://inno-cook.vercel.app/search" target="_blank"><img src="images/project1.png"
                                 class="card-img" alt="Project 1"></a>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                 <div>
                     <div class="card">
                         <a href="https://weather-app-liard-gamma.vercel.app" target="_blank"><img
-                                src="/images/project2.png" alt="Project 2"></a>
+                                src="images/project2.png" alt="Project 2"></a>
                     </div>
                 </div>
             </div>
@@ -332,8 +332,8 @@
                 </div>
                 <div>
                     <div class="card">
-                        <a href="https://github.com/timij90/UN-Countries" target="_blank"><img
-                                src="/images/project3.png" alt="Project 3"></a>
+                        <a href="https://github.com/timij90/UN-Countries" target="_blank"><img src="images/project3.png"
+                                alt="Project 3"></a>
                     </div>
                 </div>
             </div>
