--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container text-center mb-5">
             <h1 class="heading">About</h1>
             <ul class="list-group list-group-horizontal-lg">
-                <li class="list-group-item"><svg id="svg" width="41" height="40" viewBox="0 0 101 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 101 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="reactjs">
                             <g id="reactjs_2">
@@ -70,7 +70,7 @@
                         </g>
                     </svg>
                 </li>
-                <li class="list-group-item"><svg id="svg" width="40" height="40" viewBox="0 0 100 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="nextjs">
                             <g id="nextjs_2" clip-path="url(#clip0_790_6554)">
@@ -108,7 +108,7 @@
                     </svg>
 
                 </li>
-                <li class="list-group-item"><svg id="svg" width="40" height="40" viewBox="0 0 100 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="nodejs">
                             <g id="nodejs_2">
@@ -122,7 +122,7 @@
                         </g>
                     </svg>
                 </li>
-                <li class="list-group-item"><svg id="svg" width="40" height="40" viewBox="0 0 100 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="js">
                             <g id="js_2">
@@ -134,7 +134,7 @@
                         </g>
                     </svg>
                 </li>
-                <li class="list-group-item"><svg id="svg" width="40" height="40" viewBox="0 0 100 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="html5">
                             <g id="html5_2">
@@ -152,7 +152,7 @@
                         </g>
                     </svg>
                 </li>
-                <li class="list-group-item"><svg id="svg" width="40" height="40" viewBox="0 0 100 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="mongodb">
                             <g id="mongodb_2">
@@ -169,7 +169,7 @@
                         </g>
                     </svg>
                 </li>
-                <li class="list-group-item"><svg id="svg" width="40" height="40" viewBox="0 0 100 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="git">
                             <g id="git_2">
@@ -180,7 +180,7 @@
                         </g>
                     </svg>
                 </li>
-                <li class="list-group-item"><svg id="svg" width="40" height="40" viewBox="0 0 100 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="azure">
                             <g id="azure_2">
@@ -220,7 +220,7 @@
                         </defs>
                     </svg>
                 </li>
-                <li class="list-group-item"><svg id="svg" width="40" height="40" viewBox="0 0 100 100" fill="none"
+                <li class="list-group-item"><svg id="svg" viewBox="0 0 100 100" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="css3">
                             <g id="css3_2">
