--- a/index.html
+++ b/index.html
@@ -290,28 +290,31 @@
                 <div>
                     <div class="card">
                         <a href="https://inno-cook.vercel.app/search" target="_blank"><img src="images/project1.png"
-                                class="card-img" alt="Project 1"></a>
+                                class="card-img" alt="InnoCook Bundles"></a>
                     </div>
                 </div>
             </div>
 
             <div class="project-box">
                 <div class="project-info">
-                    <h2>Weather App</h2>
-                    <p>A React-based weather application with location-based search
-                        functionality.</p>
+                    <h2>DriftWay</h2>
+                    <p>An Eco-friendly travel platform connecting users with sustainable travel options and carbon
+                        tracking.</p>
                     <ul>
-                        <li>React</li>
+                        <li>Express</li>
                         <li>Next.js</li>
+                        <li>MongoDB</li>
+                        <li>Google Maps API</li>
                         <li>Bootstrap</li>
                     </ul>
                     <button class="raise"
-                        onclick="window.open('https://github.com/timij90/weather-app', '_blank')">Learn More</button>
+                        onclick="window.open('https://github.com/timij90/T9-Final_Project', '_blank')">Learn
+                        More</button>
                 </div>
                 <div>
                     <div class="card">
-                        <a href="https://weather-app-liard-gamma.vercel.app" target="_blank"><img
-                                src="images/project2.png" alt="Project 2"></a>
+                        <a href="https://drift-way.vercel.app/" target="_blank"><img src="images/driftway.png"
+                                alt="DriftWay"></a>
                     </div>
                 </div>
             </div>
@@ -333,7 +336,7 @@
                 <div>
                     <div class="card">
                         <a href="https://github.com/timij90/UN-Countries" target="_blank"><img src="images/project3.png"
-                                alt="Project 3"></a>
+                                alt="UN Countries"></a>
                     </div>
                 </div>
             </div>
